syntax = "proto3";
package event_store.client;
option java_package = "com.eventstore.client";

message UUID {
	oneof value {
		Structured structured = 1;
		string string = 2;
	}

	message Structured {
		int64 most_significant_bits = 1;
		int64 least_significant_bits = 2;
	}
}
message Empty {
}

message StreamIdentifier {
	reserved 1 to 2;
	bytes streamName = 3;
}

message FilterOptions {
	oneof filter {
		Expression stream_name = 1;
		Expression event_type = 2;
	}
	oneof window {
		uint32 max = 3;
		event_store.client.Empty count = 4;
	}
	uint32 checkpointIntervalMultiplier = 5;

	message Expression {
		string regex = 1;
		repeated string prefix = 2;
	}
}
